  search timer
- fixed some memory leaks, thanks to Bittor Corl for providing a patch
- some fixes to compile with gcc-4.4, thanks to firefly@vdrportal for providing a patch
- fixed wrong man section of some man pages, thanks to Ville Skyttä for providing a patch
- some fixes regarding libtre includes, thanks to Ville Skyttä for providing a patch

2008-04-29: Version 0.9.24
new:
- support for vdr-1.6.x/1.7.x
- speedup in searching and search timer updates (about 25%)
- speedup in EPG menues, thanks to patch authors from http://www.open7x0.org
- support for VDRSymbols font (activate it with 'WarEagle=1' in epgsearchmenu.conf)
- the EPG command 'Search in recordings' now evaluates the info.vdr instead of the
  recordings path name and also does fuzzy searching, suggested by Mase@vdrportal
- search timers with action 'switch only' and switch timers now have an additional 
  option 'unmute sound' which unmutes audio at the event, if it was off, suggested 
  by Michael Brückner
- the timer update notification mails supports now an additional variable 
  %timer.modreason%, that holds the reason for a timer update in plain text (see
  epgsearchupdmail(-html).templ for a sample)
- support for a conf.d mechanism (s. MANUAL -> 14. The conf.d subdirectory), suggested
  by Mike Constabel.
- new SVDRP command 'LSCC' that returns the results of a timer conflict 
  check. See the MANUAL for details about the format of the result list.
- new patch against VDR (vdr-1.5.17-progressbar-support-0.0.1.diff) that adds support 
  for graphical progressbars in skins classic and st:tng, thanks to zulu@vdrportal
- '0' in the menu of done recordings now toggles the display of the episode name only
- the favorites menu can now also be displayed after 'Overview - Now' via setup, 
  suggested by Bittor Corl
- menu of recordings done now sorts the date top down
- support for new info key behaviour in vdr-1.5.13
- changes for builtin graphtft-patch (when using VDR-extension-patch you need > v.37)